--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+ssh://git@github.com/dezuhan/dezui.git"
+		"url": "git+ssh://git@github.com/dezui/dezui.git"
 	},
 	"keywords": [
 		"css",
@@ -21,16 +21,16 @@
 		"contributors": []
 	},
 	"license": "MIT",
-	"homepage": "https://dezuhan.github.io/dezui",
+	"homepage": "https://dezui.github.io/dezui",
 	"community": {
-		"announcement": "https://github.com/dezuhan/dezui/discussions/categories/announcements",
+		"announcement": "https://github.com/dezui/dezui/discussions/categories/announcements",
 		"discussions": {
-			"root": "https://github.com/dezuhan/dezui/discussions",
-			"features-request": "https://github.com/dezuhan/dezui/discussions/categories/features-request",
-			"qna": "https://github.com/dezuhan/dezui/discussions/categories/q-a"
+			"root": "https://github.com/dezui/dezui/discussions",
+			"features-request": "https://github.com/dezui/dezui/discussions/categories/features-request",
+			"qna": "https://github.com/dezui/dezui/discussions/categories/q-a"
 		},
-		"bugs": "https://github.com/dezuhan/dezui/issues",
-		"wiki": "https://github.com/dezuhan/dezui/wiki",
-		"support": "https://buymeacoffee.com/dezuhan"
+		"bugs": "https://github.com/dezui/dezui/issues",
+		"wiki": "https://github.com/dezui/dezui/wiki",
+		"support": "https://buymeacoffee.com/deuzhan"
 	}
 }
