--- a/docs/releases/releases.json
+++ b/docs/releases/releases.json
@@ -1,6 +1,17 @@
 
 [
 	{
+		"version": "1.1.0",
+		"status": "stable",
+		"release-date": {
+			"dd": 30,
+			"mm": 10,
+			"yyyyy": 2021
+		},
+		"updates": [""],
+		"notes": [""]
+	},
+	{
 		"version": "1.0.0",
 		"status": "stable",
 		"release-date": {
